@@ -8,6 +8,7 @@ $Source$
 2006-08-01 Sebastian Mendel <cybot_tm@users.sourceforge.net>
     * left.php, libraries/header.inc.php:
       do not apply 'vertical scrollbar bug'-fix to IE 7
+    * changelog.php: updatet CVS URL
 
 2006-07-31 Michal Čihař  <michal@cihar.com>
     * lang/czech: Updated.
